<resources>
    <string name="app_name">YouLu</string>
    <string name="tianqi">tianQi</string>
    <string name="loginApp">登录君の帐</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="qq">QQ</string>
    <string name="wechat">weChat</string>
    <string name="captcha">请输入验证码</string>
    <string name="getCaptcha">获取验证码</string>
    <string name="phoneNumber">请输入手机号</string>
    <string name="yes">确定</string>
    <string name="back">返回</string>
    <string name="add_button">add_button</string>
</resources>