<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="194dp"
        android:layout_height="61dp"
        android:layout_marginTop="168dp"
        android:text="@string/loginApp"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/til_login_password"
        app:layout_constraintEnd_toEndOf="@+id/til_login_password"
        app:layout_constraintStart_toStartOf="@+id/til_login_password">

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="USERNAME"
            android:background="@color/white"
            android:inputType="text"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:hint="@string/username"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="@+id/btn_login_login"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_login_login">

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:autofillHints="PASSWORD"
            android:background="@color/white"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:lines="1"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/iv_login_wechat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

    <ImageView
        android:id="@+id/iv_login_qq"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_qq_login"
        app:layout_constraintBottom_toBottomOf="@+id/iv_login_wechat"
        app:layout_constraintEnd_toStartOf="@+id/iv_login_wechat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_login_wechat"
        android:contentDescription="@string/qq" />

    <ImageView
        android:id="@+id/iv_login_wechat"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_wechat_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/wechat" />

</androidx.constraintlayout.widget.ConstraintLayout>