<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialog.PhoneDialog">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone_phoneNumber"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/phoneNumber"
        app:layout_constraintBottom_toTopOf="@+id/ll_phone_captcha"
        app:layout_constraintEnd_toEndOf="@+id/ll_phone_captcha"
        app:layout_constraintStart_toStartOf="@+id/ll_phone_captcha">

        <EditText
            android:id="@+id/et_phone_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="PHONE_NUMBER"
            android:background="@color/white"
            android:inputType="number"
            android:lines="1"
            tools:ignore="LabelFor,TextFields" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/ll_phone_captcha"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_phone_yes"
        app:layout_constraintEnd_toEndOf="@+id/btn_phone_yes"
        app:layout_constraintStart_toStartOf="@+id/btn_phone_yes">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_captcha"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/captcha">

            <EditText
                android:id="@+id/et_phone_captcha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="CAPTCHA"
                android:background="@color/white"
                android:inputType="number"
                android:lines="1"
                tools:ignore="LabelFor,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_phone_getCaptcha"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:hint="@string/getCaptcha"
            android:textColorHint="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_phone_yes"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="408dp"
        android:hint="@string/yes"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>